stylesheets/jbt-styles.scss
/* ... */
.container-fluid {
  margin-top: 2em;
  margin-bottom: 2em;
}

.alert {
  margin: 20px 0px;
}
.alert-requirements {
  border-color: transparent;
  color: rgb(101, 101, 101);
  background-color: rgb(243, 243, 243);
  border-width: 1px;
  border-style: solid;
  border-color: rgb(221, 221, 221) rgb(221, 221, 221) 
}

.nav {
  margin-bottom: 0px;
}
.nav-header {
  color: rgb(153, 153, 153);
}

.tagline {
  font-weight: bold;
  font-size: large;
}

@mixin horizontal-top-ruler($height) {
  content: "";
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  height: 1px;
  height: $height;
  background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(50%, rgba(0, 0, 0, 0.1)), color-stop(100%, rgba(0, 0, 0, 0)));
  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
}

@mixin horizontal-bottom-ruler($height) {
  content: "";
  position: absolute;
  left: 0px;
  right: 0px;
  bottom: 0px;
  height: 1px;
  height: $height;
  background-image: -webkit-gradient(linear, 0% 50%, 100% 50%, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(50%, rgba(0, 0, 0, 0.1)), color-stop(100%, rgba(0, 0, 0, 0)));
  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
}

@mixin vertical-right-ruler($width) {
  content: "";
  position: absolute;
  right: 0px;
  top: 0px;
  bottom: 0px;
  width: $width;
  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
  background-image: linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
}

.button {
  cursor: pointer;
}

#rss-icon {
  vertical-align:top;
}

// ******************************************************
// Affix
// ******************************************************
.affixedContent {
  position: relative; // affix
}

.scrolledContent {
  margin-top: 40px;
}

// ******************************************************
// nav tabs
// ******************************************************
.nav-tabs > .active > a, .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
  color: rgb(101, 101, 101);
}

// ******************************************************
// asciidoctor tables
// ******************************************************
.tableblock {
  .valign-top {
    vertical-align: top;
  }
  .halign-left {
    text-align: left;
  }
  .halign-right {
    text-align: right;
  }
}


// ******************************************************
// asciidoctor centered images
// ******************************************************
span.image > img {
  margin-top: 2em;
  margin-bottom: 2em;
  
  display: block;
  margin-left: auto;
  margin-right: auto;
}

div.imageblock img {
  
  display: block;
  margin-left: auto;
  margin-right: auto;
}

// ******************************************************
// Banner
// ******************************************************
.banner {
    position: relative;
    margin-bottom: 0;
    z-index: 0;
    border-radius: 0;
}

// ******************************************************
// page note
// ******************************************************
.page-note {
  margin-top: 2em;
  /*position : relative;
  &::before {
    @include horizontal-top-ruler(1px);
  }
  */
  p {
    margin-top: 1em;
  }
}


// ******************************************************
// Breadcrumb
// ******************************************************

.breadcrumb {
  margin-bottom: 0px;
  & > .active {
    color: rgb(153, 153, 153);
  }
}
a.dropdown-toggle {
  text-decoration: none;
  b.caret {
    color: rgb(51, 102, 153);
  }
}


// ******************************************************
// Customizing the NavBar
// ******************************************************
.navbar-inner {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  .btn {
    border-width: 0px;    
  }
}
// ******************************************************
// Hero Unit
// ******************************************************
.hero-unit {
  background: white;
  padding-top: 30px;
  padding-bottom: 0px;
  margin-top: 30px;
}

.hero-unit > img {
  padding-left: 20px; 
  float: right;
}

.hero-content h1, .hero-content h2, .hero-content p {
  text-align: right;
}
.hero-content h1 {
  margin-top: 20px;
}
.hero-content h2 img {
  vertical-align: text-bottom;
}

// ****************************************
// Side bar
// ****************************************
body {
  //position: relative;
}  


.bs-docs-sidenav .label {
  float: right;
}
/* ... */

